--- a/src/allprojectcard.css
+++ b/src/allprojectcard.css
@@ -1,43 +1,61 @@
-.project_container_all{
- 
-    display: flex;
-    flex-direction: row;
-    width: 100%;
+.project_container_all {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
   margin-top: 20px;
   border-radius: 12px;
-  background: radial-gradient(
-    1415.25% 155.56% at 107.08% -4.94%,
-    rgba(196, 197, 199, 0.218) 0%,
-    rgba(240, 240, 240, 0) 100%
-  );
-box-shadow: 5px 4px 4px 0px rgba(0, 0, 0, 0.40);
-  }
-  .project_container_all_left{
-    display: flex;
-    width: 30%;
-  }
-  .project_container_all_left > img{
+  background: rgb(2,0,36);
+ 
+  box-shadow: 5px 4px 4px 0px rgba(0, 0, 0, 0.4);
+  background-color: #0093E9;
+background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
+
+}
+.project_container_all_left {
+  display: flex;
+  width: 30%;
+}
+.project_container_all_left > img {
+  margin: 20px;
+  width: 200px;
+  object-fit: contain;
+  border-radius: 5px;
+}
+.project_container_all_right {
+  margin: 10px;
+  height: 100%;
+  width: 70%;
+}
+
+h6 {
+  padding: 20px;
+  width: 10%;
+  font-size: 16px;
+}
+.project_container_all_right > h3 {
+  text-align: start;
+  font-family: sans-serif;
+  font-weight: 400px;
+  font-size: 18px;
+ padding-bottom:0px;
    
-        margin: 20px;
-        width: 200px;
-        object-fit: contain;
-     border-radius: 5px;
-    
-  }
-  .project_container_all_right{
-    width: 70%;
-  }
+}
+.project_container_all_right > span{
+  padding-left: 10px;
  
- h6{
-   padding: 20px;
-    width: 10%;
-    font-size: 16px;
-     
- }
- 
- p{
-    text-align:start;
-    font-family: sans-serif;
-    font-weight: 200px;
-    font-size: 14px;
- }
+}
+
+.project_container_all_right > p {
+  text-align: start;
+  font-family: sans-serif;
+  font-weight: 200px;
+  font-size: 16px;
+  padding-left: 10px;
+  margin-top: 10px;
+
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+
