--- a/src/allprojectcard.css
+++ b/src/allprojectcard.css
@@ -59,3 +59,54 @@ a {
   color: black;
 }
 
+@media (max-width: 768px) {
+    
+  
+  .project_container_all {
+    
+ 
+    margin-top: 20px;
+    
+  
+  }
+  .project_container_all_left {
+   
+    width: 30%;
+  }
+  .project_container_all_left > img {
+    margin: 2px;
+    width: 50px;
+    height: 100px;
+    object-fit:contain;
+  }
+  .project_container_all_right {
+    margin: 10px;
+    height: 100%;
+    width: 70%;
+  }
+  
+  h6 {
+    padding: 10px;
+    width: 10%;
+    font-size: 1rem;
+    
+  }
+  .project_container_all_right > h3 {
+    
+    font-size: 1rem;
+   
+     
+  }
+  .project_container_all_right > span{
+    padding-left: 10px;
+   
+  }
+  
+  .project_container_all_right > p {
+     
+    font-size: 1rem;
+     
+  
+  }
+  
+}
