--- a/src/project.css
+++ b/src/project.css
@@ -1,4 +1,3 @@
- 
 .project_container_top3 {
   display: flex;
   width: 100%;
@@ -8,32 +7,52 @@
 }
 
 .project_row {
- margin: 50px;
- margin-left: 40px;
+  margin: 50px;
+  margin-left: 40px;
 }
-h3{
-text-align: center;
-padding: 10px;
-color: #000;
-font-family: Inter;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-letter-spacing: 2px;
-text-transform: uppercase;
+h3 {
+  text-align: center;
+  padding: 10px;
+  color: #000;
+  font-family: Inter;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 2px;
+  text-transform: uppercase;
 }
-.project_container_all_page{
- display: flex;
- justify-content: center;
- align-items: center;
- width: 100%;
+.project_container_all_page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
-.item{
+.item {
   width: 100%;
   margin: 100px;
- 
 }
-a{
+a {
   text-decoration: none;
+}
+
+@media (max-width: 768px) {
+  .project_container_top3 {
+    height: 200px;
+    margin-bottom: 20px;
+  }
+
+  .project_row {
+    margin: 2px;
+    margin-left: 20px;
+  }
+  h3 {
+    padding: 10px;
+  }
+  
+  .item {
+    margin:20px;
+    
+  
+  }
 }
