--- a/src/projectcard.css
+++ b/src/projectcard.css
@@ -42,3 +42,29 @@
   letter-spacing: 2px;
  
 }
+
+@media (max-width: 768px) {
+ 
+.Project {
+  padding: 0px;
+  margin: 0px;
+  width: 100%;
+  max-height: 200px;
+  
+}
+
+.Project div > img {
+  height: 50px;
+  width: 80px;
+  object-fit: contain;
+  margin-bottom: 10px;
+}
+
+.Project_title > p {
+  padding: 20px;
+  font-size: 0.5rem;
+  
+ 
+}
+
+}
