--- a/src/home.css
+++ b/src/home.css
@@ -60,23 +60,25 @@ height: 80vh;
     .home_container_left_heading h2{
         color: #000;
         font-family: Inter;
-        font-size: 1rem;
+        font-size: 0.8rem;
         font-style: normal;
         font-weight: 200;
         line-height: normal;
         letter-spacing: 8.6px;
         text-transform: uppercase;
-        margin: 20px;
+        margin-left: 20px;
+       
         }
         .home_container_left_heading h1{
             color: #000;
             font-family: Inter;
-            font-size: 2rem;
+            font-size: 1.6rem;
             font-style: normal;
             font-weight: 500;
             line-height: normal;
-            letter-spacing: 18.8px;
+            letter-spacing: 10.8px;
             text-transform: uppercase;
-            margin: 18px;
+            margin-left: 19px;
+             
         }
 }
