--- a/src/contactus.css
+++ b/src/contactus.css
@@ -68,25 +68,13 @@ border: 1px solid #000;
 background: #0B8AFF;
 box-shadow: 5px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
-@media (max-width: 768px) {
-  .contactus_container {
-   margin-top: 50px;
-    max-width: 500px;
-    max-height: 700px;
-    
-  } 
-  .contactus_inner_container {
-    width: 380px;
-    height: 500px;
-    
-  }
-  .contactus_inner_container > h3 {
-   
-    font-size: 1.5rem;
- 
-  }
-  form {
-    margin: 20px;
-  }
-  
+.custom-alert {
+  align-self: center;
+  background-color: #4caf50;
+  color: #fff;
+  padding: 15px;
+  margin-bottom: 20px;
+  border-radius: 4px;
+  text-align: center;
+  /* Add any additional styles as needed */
 }
